# ticketlog

./: .ticketlog.toml  README.md  development.md  pyproject.toml  tasklog.jl  ticketlog.jl  ticketlog.jsonl
.claude/: settings.local.json
scripts/: release.sh
src/tasklog/: __init__.py  __main__.py  cli.py  storage.py
src/tasklog/commands/: close.py  create.py  list.py  ready.py  show.py  update.py
src/ticketlog/: __init__.py  __main__.py  cli.py  config.py  models.py  storage.py  utils.py
src/ticketlog/commands/: cancel.py  clean.py  close.py  create.py  dep.py  import_beads.py  init.py  list.py  ready.py  show.py  start.py  update.py  version.py
tests/: test_cancel_command.py  test_close_command.py  test_dead_history.py  test_version_command.py
