[project]
name = "ticketlog"
version = "0.1.0"
description = "Lightweight task/issue tracking tool with JSON Lines storage"
readme = "README.md"
authors = [
    { name = "Elias Dorneles", email = "elias.dorneles@hey.com" }
]
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0.0",
    "rich>=13.0.0",
]

[project.scripts]
tl = "ticketlog.cli:main"

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"
