[project]
name = "ticketlog"
version = "0.2.1"
description = "Lightweight task/issue tracking tool with JSON Lines storage"
readme = "README.md"
authors = [
    { name = "Elias Dorneles", email = "elias.dorneles@hey.com" }
]
requires-python = ">=3.10"
dependencies = []

[project.scripts]
tl = "ticketlog.cli:main"

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
